KRYPTO-2/gramatica/KryptoParser.py
# Generated from KryptoParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class KryptoParser ( Parser ):

    grammarFileName = "KryptoParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'krif'", "'krelse'", "'krloop'", "'krfor'", 
                     "'krfunc'", "'yield'", "'stop'", "'kprint'", "'kread'", 
                     "'kwrite'", "'num'", "'dec'", "'logic'", "'text'", 
                     "'chain'", "'grid'", "'vault'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'^'", "'='", "','", "';'", "'.'", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'", "'=='", "'!='", "'<='", 
                     "'>='", "'<'", "'>'", "'||'", "'&&'", "'!'", "'k_plot'", 
                     "'k_show'", "'k_title'", "'k_xlabel'", "'k_ylabel'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "WHILE", "FOR", "FUNCTION", 
                      "RETURN", "STOP", "PRINT", "READ_F", "WRITE_F", "INT_T", 
                      "FLOAT_T", "BOOL_T", "STRING_T", "LIST_T", "MATRIX_T", 
                      "DICC_T", "BOOL_LIT", "NUMBER", "STRING", "ID", "PLUS", 
                      "MINUS", "MUL", "DIV", "MOD", "POW", "ASSIGN", "COMMA", 
                      "SEMI", "DOT", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
                      "LBRACE", "RBRACE", "EQ", "NEQ", "LE", "GE", "LT", 
                      "GT", "OR", "AND", "NOT", "PLOTVAG", "SHOWVAG", "TITLEVAG", 
                      "XLABELVAG", "YLABELVAG", "COMMENT", "BLOCK_COMMENT", 
                      "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_type = 2
    RULE_varDecl = 3
    RULE_assignment = 4
    RULE_ifStatement = 5
    RULE_whileStatement = 6
    RULE_forStatement = 7
    RULE_forInit = 8
    RULE_block = 9
    RULE_functionDecl = 10
    RULE_paramList = 11
    RULE_returnStmt = 12
    RULE_printStmt = 13
    RULE_readFileStmt = 14
    RULE_writeFileStmt = 15
    RULE_expr = 16
    RULE_functionCall = 17
    RULE_argList = 18
    RULE_literal = 19
    RULE_listLiteral = 20
    RULE_matrixLiteral = 21
    RULE_kryptoGraphicStmt = 22

    ruleNames =  [ "program", "statement", "type", "varDecl", "assignment", 
                   "ifStatement", "whileStatement", "forStatement", "forInit", 
                   "block", "functionDecl", "paramList", "returnStmt", "printStmt", 
                   "readFileStmt", "writeFileStmt", "expr", "functionCall", 
                   "argList", "literal", "listLiteral", "matrixLiteral", 
                   "kryptoGraphicStmt" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    WHILE=3
    FOR=4
    FUNCTION=5
    RETURN=6
    STOP=7
    PRINT=8
    READ_F=9
    WRITE_F=10
    INT_T=11
    FLOAT_T=12
    BOOL_T=13
    STRING_T=14
    LIST_T=15
    MATRIX_T=16
    DICC_T=17
    BOOL_LIT=18
    NUMBER=19
    STRING=20
    ID=21
    PLUS=22
    MINUS=23
    MUL=24
    DIV=25
    MOD=26
    POW=27
    ASSIGN=28
    COMMA=29
    SEMI=30
    DOT=31
    LPAREN=32
    RPAREN=33
    LBRACK=34
    RBRACK=35
    LBRACE=36
    RBRACE=37
    EQ=38
    NEQ=39
    LE=40
    GE=41
    LT=42
    GT=43
    OR=44
    AND=45
    NOT=46
    PLOTVAG=47
    SHOWVAG=48
    TITLEVAG=49
    XLABELVAG=50
    YLABELVAG=51
    COMMENT=52
    BLOCK_COMMENT=53
    WS=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(KryptoParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KryptoParser.StatementContext)
            else:
                return self.getTypedRuleContext(KryptoParser.StatementContext,i)


        def getRuleIndex(self):
            return KryptoParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = KryptoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4433252370611578) != 0):
                self.state = 46
                self.statement()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(KryptoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(KryptoParser.VarDeclContext,0)


        def SEMI(self):
            return self.getToken(KryptoParser.SEMI, 0)

        def assignment(self):
            return self.getTypedRuleContext(KryptoParser.AssignmentContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(KryptoParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(KryptoParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(KryptoParser.ForStatementContext,0)


        def functionDecl(self):
            return self.getTypedRuleContext(KryptoParser.FunctionDeclContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(KryptoParser.ReturnStmtContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(KryptoParser.PrintStmtContext,0)


        def readFileStmt(self):
            return self.getTypedRuleContext(KryptoParser.ReadFileStmtContext,0)


        def writeFileStmt(self):
            return self.getTypedRuleContext(KryptoParser.WriteFileStmtContext,0)


        def kryptoGraphicStmt(self):
            return self.getTypedRuleContext(KryptoParser.KryptoGraphicStmtContext,0)


        def expr(self):
            return self.getTypedRuleContext(KryptoParser.ExprContext,0)


        def getRuleIndex(self):
            return KryptoParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = KryptoParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.varDecl()
                self.state = 55
                self.match(KryptoParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.assignment()
                self.state = 58
                self.match(KryptoParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.ifStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 61
                self.whileStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 62
                self.forStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 63
                self.functionDecl()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 64
                self.returnStmt()
                self.state = 65
                self.match(KryptoParser.SEMI)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 67
                self.printStmt()
                self.state = 68
                self.match(KryptoParser.SEMI)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 70
                self.readFileStmt()
                self.state = 71
                self.match(KryptoParser.SEMI)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 73
                self.writeFileStmt()
                self.state = 74
                self.match(KryptoParser.SEMI)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 76
                self.kryptoGraphicStmt()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 77
                self.expr(0)
                self.state = 78
                self.match(KryptoParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_T(self):
            return self.getToken(KryptoParser.INT_T, 0)

        def FLOAT_T(self):
            return self.getToken(KryptoParser.FLOAT_T, 0)

        def BOOL_T(self):
            return self.getToken(KryptoParser.BOOL_T, 0)

        def STRING_T(self):
            return self.getToken(KryptoParser.STRING_T, 0)

        def LIST_T(self):
            return self.getToken(KryptoParser.LIST_T, 0)

        def MATRIX_T(self):
            return self.getToken(KryptoParser.MATRIX_T, 0)

        def DICC_T(self):
            return self.getToken(KryptoParser.DICC_T, 0)

        def getRuleIndex(self):
            return KryptoParser.RULE_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = KryptoParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 260096) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(KryptoParser.TypeContext,0)


        def ID(self):
            return self.getToken(KryptoParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(KryptoParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(KryptoParser.ExprContext,0)


        def getRuleIndex(self):
            return KryptoParser.RULE_varDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = KryptoParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.type_()
            self.state = 85
            self.match(KryptoParser.ID)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==28:
                self.state = 86
                self.match(KryptoParser.ASSIGN)
                self.state = 87
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(KryptoParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(KryptoParser.ASSIGN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KryptoParser.ExprContext)
            else:
                return self.getTypedRuleContext(KryptoParser.ExprContext,i)


        def LBRACK(self):
            return self.getToken(KryptoParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(KryptoParser.RBRACK, 0)

        def getRuleIndex(self):
            return KryptoParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = KryptoParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.match(KryptoParser.ID)
                self.state = 91
                self.match(KryptoParser.ASSIGN)
                self.state = 92
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.match(KryptoParser.ID)
                self.state = 94
                self.match(KryptoParser.LBRACK)
                self.state = 95
                self.expr(0)
                self.state = 96
                self.match(KryptoParser.RBRACK)
                self.state = 97
                self.match(KryptoParser.ASSIGN)
                self.state = 98
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(KryptoParser.IF, 0)

        def LPAREN(self):
            return self.getToken(KryptoParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(KryptoParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(KryptoParser.RPAREN, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KryptoParser.BlockContext)
            else:
                return self.getTypedRuleContext(KryptoParser.BlockContext,i)


        def STOP(self):
            return self.getToken(KryptoParser.STOP, 0)

        def ELSE(self):
            return self.getToken(KryptoParser.ELSE, 0)

        def getRuleIndex(self):
            return KryptoParser.RULE_ifStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = KryptoParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(KryptoParser.IF)
            self.state = 103
            self.match(KryptoParser.LPAREN)
            self.state = 104
            self.expr(0)
            self.state = 105
            self.match(KryptoParser.RPAREN)
            self.state = 106
            self.block()
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 107
                self.match(KryptoParser.ELSE)
                self.state = 108
                self.block()


            self.state = 111
            self.match(KryptoParser.STOP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(KryptoParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(KryptoParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(KryptoParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(KryptoParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(KryptoParser.BlockContext,0)


        def STOP(self):
            return self.getToken(KryptoParser.STOP, 0)

        def getRuleIndex(self):
            return KryptoParser.RULE_whileStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = KryptoParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(KryptoParser.WHILE)
            self.state = 114
            self.match(KryptoParser.LPAREN)
            self.state = 115
            self.expr(0)
            self.state = 116
            self.match(KryptoParser.RPAREN)
            self.state = 117
            self.block()
            self.state = 118
            self.match(KryptoParser.STOP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(KryptoParser.FOR, 0)

        def LPAREN(self):
            return self.getToken(KryptoParser.LPAREN, 0)

        def forInit(self):
            return self.getTypedRuleContext(KryptoParser.ForInitContext,0)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(KryptoParser.SEMI)
            else:
                return self.getToken(KryptoParser.SEMI, i)

        def expr(self):
            return self.getTypedRuleContext(KryptoParser.ExprContext,0)


        def assignment(self):
            return self.getTypedRuleContext(KryptoParser.AssignmentContext,0)


        def RPAREN(self):
            return self.getToken(KryptoParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(KryptoParser.BlockContext,0)


        def STOP(self):
            return self.getToken(KryptoParser.STOP, 0)

        def getRuleIndex(self):
            return KryptoParser.RULE_forStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStatement" ):
                return visitor.visitForStatement(self)
            else:
                return visitor.visitChildren(self)




    def forStatement(self):

        localctx = KryptoParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_forStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(KryptoParser.FOR)
            self.state = 121
            self.match(KryptoParser.LPAREN)
            self.state = 122
            self.forInit()
            self.state = 123
            self.match(KryptoParser.SEMI)
            self.state = 124
            self.expr(0)
            self.state = 125
            self.match(KryptoParser.SEMI)
            self.state = 126
            self.assignment()
            self.state = 127
            self.match(KryptoParser.RPAREN)
            self.state = 128
            self.block()
            self.state = 129
            self.match(KryptoParser.STOP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForInitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(KryptoParser.VarDeclContext,0)


        def assignment(self):
            return self.getTypedRuleContext(KryptoParser.AssignmentContext,0)


        def getRuleIndex(self):
            return KryptoParser.RULE_forInit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForInit" ):
                return visitor.visitForInit(self)
            else:
                return visitor.visitChildren(self)




    def forInit(self):

        localctx = KryptoParser.ForInitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_forInit)
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11, 12, 13, 14, 15, 16, 17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.varDecl()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.assignment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(KryptoParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(KryptoParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KryptoParser.StatementContext)
            else:
                return self.getTypedRuleContext(KryptoParser.StatementContext,i)


        def getRuleIndex(self):
            return KryptoParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = KryptoParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(KryptoParser.LBRACE)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4433252370611578) != 0):
                self.state = 136
                self.statement()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 142
            self.match(KryptoParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(KryptoParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(KryptoParser.ID, 0)

        def LPAREN(self):
            return self.getToken(KryptoParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(KryptoParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(KryptoParser.BlockContext,0)


        def STOP(self):
            return self.getToken(KryptoParser.STOP, 0)

        def paramList(self):
            return self.getTypedRuleContext(KryptoParser.ParamListContext,0)


        def getRuleIndex(self):
            return KryptoParser.RULE_functionDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = KryptoParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(KryptoParser.FUNCTION)
            self.state = 145
            self.match(KryptoParser.ID)
            self.state = 146
            self.match(KryptoParser.LPAREN)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 147
                self.paramList()


            self.state = 150
            self.match(KryptoParser.RPAREN)
            self.state = 151
            self.block()
            self.state = 152
            self.match(KryptoParser.STOP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(KryptoParser.ID)
            else:
                return self.getToken(KryptoParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(KryptoParser.COMMA)
            else:
                return self.getToken(KryptoParser.COMMA, i)

        def getRuleIndex(self):
            return KryptoParser.RULE_paramList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = KryptoParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(KryptoParser.ID)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 155
                self.match(KryptoParser.COMMA)
                self.state = 156
                self.match(KryptoParser.ID)
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(KryptoParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(KryptoParser.ExprContext,0)


        def getRuleIndex(self):
            return KryptoParser.RULE_returnStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = KryptoParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(KryptoParser.RETURN)
            self.state = 163
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(KryptoParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(KryptoParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(KryptoParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(KryptoParser.RPAREN, 0)

        def getRuleIndex(self):
            return KryptoParser.RULE_printStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)




    def printStmt(self):
